--- a/css/styles.css
+++ b/css/styles.css
@@ -4,18 +4,6 @@
   padding: 0;
   box-sizing: border-box; }
 
-@media screen and (max-width: 640px) {
-  body {
-    background-image: linear-gradient(to top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1); } }
-
-@media screen and (min-width: 640px) and (max-width: 1280px) {
-  body {
-    background-image: linear-gradient(to top, #daec4f, #80ee84, #00e7be, #00d9e9, #00c6f9, #3bc4fa, #55c1f9, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1); } }
-
-@media screen and (min-width: 1280px) {
-  body {
-    background-image: linear-gradient(to top, #603e70, #63467c, #654e88, #665795, #6660a1, #6271b1, #5f82c0, #5c92cc, #63adda, #78c7e3, #97dfec, #bcf7f6); } }
-
 body {
   font-family: "Anton", sans-serif;
   color: black;
@@ -46,9 +34,12 @@ main .container h1 {
   font-size: 5rem; }
 
 main .container .parrafo {
-  text-align: left;
+  text-align: justify;
   font-size: 1.5rem;
   padding: 10px; }
+
+main .container .img-holder {
+  overflow: hidden; }
 
 main .container .row a {
   text-decoration: none; }
@@ -95,3 +86,19 @@ main .container .row .col .card {
   text-align: center;
   font-size: 12px;
   line-height: 1.42857; }
+
+@media screen and (max-width: 640px) {
+  body {
+    background-image: linear-gradient(to top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1); }
+    body main .container .img-holder img {
+      width: 400px;
+      height: 250;
+      object-fit: cover; } }
+
+@media screen and (min-width: 640px) and (max-width: 1280px) {
+  body {
+    background-image: linear-gradient(to top, #daec4f, #80ee84, #00e7be, #00d9e9, #00c6f9, #3bc4fa, #55c1f9, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1); } }
+
+@media screen and (min-width: 1280px) {
+  body {
+    background-image: linear-gradient(to top, #603e70, #63467c, #654e88, #665795, #6660a1, #6271b1, #5f82c0, #5c92cc, #63adda, #78c7e3, #97dfec, #bcf7f6); } }
